# faster-cosine

./: .gitignore  Cargo.toml  README.md  Rakefile  faster_cosine.gemspec
ext/faster_cosine/: Cargo.toml  build.rs  extconf.rb
ext/faster_cosine/src/: lib.rs
lib/: faster_cosine.rb
lib/faster_cosine/: version.rb
test/: bench.rb  cosine_test.rb
